--- a/template/index.html
+++ b/template/index.html
@@ -75,11 +75,7 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            
-
             <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Frase curta e topzera</h1>
-
-
           </div>
         </div>
       </div>
@@ -101,23 +97,21 @@
         <div class="col-md-4">
           <div class="feature-3 pricing h-100 text-center">
             <div class="icon">
-              <span class="icon-map-marker"></span>
+              <span class="icon-user"></span>
             </div>
             <a href="#">
-              <h2 class="my-4 heading">Ecopontos</h2>
+              <h2 class="my-4 heading">Cadastrar</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum odio minima tempora animi iure.</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="feature-1 pricing h-100 text-center">
             <div class="icon">
-              <span class="icon-book"></span>
+              <span class="icon-map-marker"></span>
             </div>
             <a href="#">
-              <h2 class="my-4 heading">Como funciona</h2>
+              <h2 class="my-4 heading">Ecopontos</h2>
             </a>
-            
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum odio minima tempora animi iure.</p>
           </div>
         </div>
@@ -135,38 +129,39 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-5 slide-one-item  owl-carousel">
-            <div>
-              <figure class="mb-4">
-                <img src="images/person_3.jpg" alt="Image" class="mb-3">
-              </figure>
-            </div>
-
-            <div>
-              <figure class="mb-4">
-                <img src="images/person_2.jpg" alt="Image" class="mb-3">
-              </figure>
-            </div>
-
-            <div>
-              <figure class="mb-4">
-                <img src="images/person_4.jpg" alt="Image" class="mb-3">
-              </figure>
-            </div>
-
-            <div>
-              <figure class="mb-4">
-                <img src="images/person_5.jpg" alt="Image" class="mb-3">
-              </figure>
-            </div>
-
-          </div>
+        <div class="row justify-content-around">
 
           <div class="col-md-5 align-self-center">
             <div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
             </div>
+          </div>
+
+          <div class="col-md-4 slide-one-item owl-carousel">
+            <div class="d-flex justify-content-center">
+              <figure style="width:250px;">
+                <img src="https://pbs.twimg.com/profile_images/661888424073367552/pSK6r19h_400x400.png" alt="Image">
+              </figure>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <figure style="width:250px;">
+                <img src="images/person_2.jpg" alt="Image">
+              </figure>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <figure style="width:250px;">
+                <img src="images/person_4.jpg" alt="Image">
+              </figure>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <figure style="width:250px;">
+                <img src="images/person_5.jpg" alt="Image">
+              </figure>
+            </div>
+
           </div>
         </div>
         
@@ -179,72 +174,16 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Colaboradores</h2>
-            <p class="color-black-opacity-5">We Offer The Following Services</p>
+            <h2 class="font-weight-light text-primary">Lixos mais descartados</h2>
+            <!--<p class="color-black-opacity-5">We Offer The Following Services</p>-->
           </div>
         </div>
+        <!-- Banner que igu vai colocar -->
         <div class="row align-items-stretch">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-travel"></span></div>
-              <div>
-                <h3>Air Air Freight</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-sea-ship-with-containers"></span></div>
-              <div>
-                <h3>Ocean Freight</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-frontal-truck"></span></div>
-              <div>
-                <h3>Ground Shipping</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-barn"></span></div>
-              <div>
-                <h3>Warehousing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-platform"></span></div>
-              <div>
-                <h3>Storage</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary flaticon-car"></span></div>
-              <div>
-                <h3>Delivery Van</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
+          <div class="d-flex justify-content-center">
+            <figure style="width:;">
+              <img src="" alt="Image">
+            </figure>
           </div>
 
         </div>
@@ -317,17 +256,17 @@
             </form>
           </div>
         </div>
+
         <div class="row mt-5 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
-            <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+              <p>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </p>
             </div>
           </div>
-          
         </div>
       </div>
     </footer>
