changing layout of index.html and create contact page

--- a/template/index.html
+++ b/template/index.html
@@ -49,10 +49,10 @@
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">Desafios</a></li>
-                <li><a href="industries.html">Como funciona</a></li>
-                <li><a href="blog.html">Contato</a></li>
-                <li><a href="contact.html">Sobre</a></li>
+                <li><a href="#">Desafios</a></li>
+                <li><a href="help.html">Como funciona</a></li>
+                <li><a href="contact.html">Contato</a></li>
+                <li><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
               </ul>
             </nav>
@@ -61,11 +61,8 @@
 
           <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
-          </div>
-
         </div>
       </div>
-      
     </header>
 
   
@@ -197,7 +194,7 @@
         <div class="row text-center">
           <div class="col-md-12">
             <h2 class="mb-5 text-black">Ainda não possui uma conta?</h2>
-            <p class="mb-0"><a href="booking.html" class="btn btn-primary py-3 px-5 text-white">Registre-se!</a></p>
+            <p class="mb-0"><a href="login.html" class="btn btn-primary py-3 px-5 text-white">Registre-se!</a></p>
           </div>
         </div>
       </div>
@@ -205,55 +202,27 @@
     
     <footer class="site-footer">
       <div class="container">
-        <div class="row">
-          <div class="col-md-9">
-            <div class="row">
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Products</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Features</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-              </div>
-            </div>
+        <div class="row justify-content-around">
+          <div class="col-md-3">
+            <h2 class="mb-4">Recicle</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+          </div>
+
+          <div class="col-md-2">
+            <h2 class="mb-4">Menu</h2>
+            <ul class="list-unstyled">
+              <li><a href="#">Entrar</a></li>
+              <li><a href="#">Desafios</a></li>
+              <li><a href="#">Como Funciona</a></li>
+              <li><a href="#">Contato</a></li>
+              <li><a href="#">Sobre</a></li>
+            </ul>
           </div>
           <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-white" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
+            <h2 class="mb-4">Redes Sociais</h2>
+            <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
           </div>
         </div>
 
