--- a/template/about.html
+++ b/template/about.html
@@ -38,33 +38,24 @@
       <div class="site-mobile-menu-body"></div>
     </div>
     
-    <header class="site-navbar py-3" role="banner">
+     <header class="site-navbar py-3" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Logistics</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Recicle</a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About Us</a></li>
-                <li class="has-children">
-                  <a href="services.html">Services</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Air Freight</a></li>
-                    <li><a href="#">Ocean Freight</a></li>
-                    <li><a href="#">Ground Shipping</a></li>
-                    <li><a href="#">Warehousing</a></li>
-                    <li><a href="#">Storage</a></li>
-                  </ul>
-                </li>
-                <li><a href="industries.html">Industries</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">Desafios</a></li>
+                <li><a href="industries.html">Como funciona</a></li>
+                <li><a href="blog.html">Contato</a></li>
+                <li><a href="contact.html">Sobre</a></li>
+                <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
               </ul>
             </nav>
           </div>
@@ -74,10 +65,11 @@
 
           </div>
 
-        </div>
-      </div>
+         </div>
+        </header>
+    </div>
       
-    </header>
+  
 
   
 
@@ -86,14 +78,12 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light text-uppercase font-weight-bold">About Us</h1>
-            <p class="breadcrumb-custom"><a href="index.html">Home</a> <span class="mx-2">&gt;</span> <span>About Us</span></p>
+            <h1 class="text-white font-weight-light text-uppercase font-weight-bold">Sobre</h1>
+            <p class="breadcrumb-custom"><a href="index.html">Home</a> <span class="mx-2">&gt;</span> <span>Sobre</span></p>
           </div>
         </div>
       </div>
     </div>  
-
-    
 
     <div class="site-section">
       <div class="container">
@@ -104,7 +94,7 @@
           </div>
           <div class="col-md-6 order-md-1" data-aos="fade">
             <div class="text-left pb-1 border-primary mb-4">
-              <h2 class="text-primary">Our History</h2>
+              <h2 class="text-primary">Nossa história</h2>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti reprehenderit animi est eaque corporis! Nisi, asperiores nam amet doloribus, soluta ut reiciendis. Consequatur modi rem, vero eos ipsam voluptas.</p>
             <p class="mb-5">Error minus sint nobis dolor laborum architecto, quaerat. Voluptatum porro expedita labore esse velit veniam laborum quo obcaecati similique iusto delectus quasi!</p>
@@ -136,76 +126,36 @@
         </div>
       </div>
     </div>
-  
-    <div class="site-section bg-image overlay" style="background-image: url('images/hero_bg_4.jpg');">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary" data-aos="fade">How It Works</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-            <div class="how-it-work-item">
-              <span class="number">1</span>
-              <div class="how-it-work-body">
-                <h2>Choose Your Service</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
-                <ul class="ul-check list-unstyled white">
-                  <li class="text-white">Error minus sint nobis dolor</li>
-                  <li class="text-white">Voluptatum porro expedita labore esse</li>
-                  <li class="text-white">Voluptas unde sit pariatur earum</li>
-                </ul>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <div class="how-it-work-item">
-              <span class="number">2</span>
-              <div class="how-it-work-body">
-                <h2>Select Your Payment</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
-                <ul class="ul-check list-unstyled white">
-                  <li class="text-white">Error minus sint nobis dolor</li>
-                  <li class="text-white">Voluptatum porro expedita labore esse</li>
-                  <li class="text-white">Voluptas unde sit pariatur earum</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
-            <div class="how-it-work-item">
-              <span class="number">3</span>
-              <div class="how-it-work-body">
-                <h2>Tracking Your Order</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
-                <ul class="ul-check list-unstyled white">
-                  <li class="text-white">Error minus sint nobis dolor</li>
-                  <li class="text-white">Voluptatum porro expedita labore esse</li>
-                  <li class="text-white">Voluptas unde sit pariatur earum</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
+    
 
     <div class="site-section border-bottom">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary" data-aos="fade">Our Team</h2>
+            <h2 class="font-weight-light text-primary" data-aos="fade">Equipe desenvolvedora</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
             <div class="person">
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded mb-5">
-              <h3>Christine Rooster</h3>
+              <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
+              <h3>Débora Samara</h3>
+              <p class="position text-muted">Co-Founder, President</p>
+              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
+              <ul class="ul-social-circle">
+                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                <li><a href="#"><span class="icon-linkedin"></span></a></li>
+                <li><a href="#"><span class="icon-instagram"></span></a></li>
+              </ul>
+            </div>
+
+          </div>
+           <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="person">
+              <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
+              <h3>Fabiana Pereira</h3>
               <p class="position text-muted">Co-Founder, President</p>
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
@@ -216,10 +166,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
             <div class="person">
-              <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded mb-5">
-              <h3>Brandon Sharp</h3>
+              <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
+              <h3>Higor Nascimento</h3>
               <p class="position text-muted">Co-Founder, COO</p>
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
@@ -230,10 +180,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+          <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
             <div class="person">
-              <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded mb-5">
-              <h3>Connor Hodson</h3>
+              <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
+              <h3>João Paulo</h3>
               <p class="position text-muted">Marketing</p>
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
