changing carousel and colors

--- a/template/css/bootstrap/bootstrap.css
+++ b/template/css/bootstrap/bootstrap.css
@@ -11,18 +11,18 @@
   --pink: #e83e8c;
   --red: #f23a2e;
   --orange: #ef6c57;
-  --yellow: #f89d13;
+  --yellow: #44BF76 ;
   --green: #8bc34a;
   --teal: #20c997;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #f89d13;
+  --primary: #44BF76 ;
   --secondary: #6c757d;
   --success: #8bc34a;
   --info: #17a2b8;
-  --warning: #f89d13;
+  --warning: #44BF76 ;
   --danger: #f23a2e;
   --light: #f8f9fa;
   --dark: #343a40;
