--- a/template/index.html
+++ b/template/index.html
@@ -72,7 +72,7 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Frase curta e topzera</h1>
+            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte corre</h1>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
             <a href="#">
               <h2 class="my-4 heading">Desafios</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum odio minima tempora animi iure.</p>
+            <p>cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana, como participar e tempo.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -99,6 +99,7 @@
             <a href="#">
               <h2 class="my-4 heading">Cadastrar</h2>
             </a>
+            <p>Faça seu cadastro e participe dos desafios para ganhar premiações e o mais importanta, ajudar a natureza.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -109,7 +110,7 @@
             <a href="#">
               <h2 class="my-4 heading">Ecopontos</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum odio minima tempora animi iure.</p>
+            <p>Veja as cooperativas proximas de você.</p>
           </div>
         </div>
       </div>
@@ -143,19 +144,19 @@
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/person_2.jpg" alt="Image">
+                <img src="images/xbox.jpg" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/person_4.jpg" alt="Image">
+                <img src="images/spot.jpg" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/person_5.jpg" alt="Image">
+                <img src="images/play.jpg" alt="Image">
               </figure>
             </div>
 
@@ -178,8 +179,8 @@
         <!-- Banner que igu vai colocar -->
         <div class="row align-items-stretch">
           <div class="d-flex justify-content-center">
-            <figure style="width:;">
-              <img src="" alt="Image">
+          <figure style="">
+              <img src="images/lixo.jpg" alt="Image">
             </figure>
           </div>
 
