--- a/template/index.html
+++ b/template/index.html
@@ -117,7 +117,7 @@
 
   
     
-    <div class="site-section border-bottom">
+    <div class="site-section">
       <div class="container">
 
         <div class="row justify-content-center mb-5">
