fabiana changes colors and set menu

--- a/template/contact.html
+++ b/template/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900|Display+Playfair:200,300,400,700"> 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -38,7 +38,7 @@
     
     <header class="site-navbar py-3" role="banner">
 
-      <div class="container">
+      <div class="container fixed-top">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
@@ -50,7 +50,6 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Desafios</a></li>
-                <li><a href="help.html">Como funciona</a></li>
                 <li><a href="contact.html">Contato</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
