--- a/template/css/bootstrap/bootstrap.css
+++ b/template/css/bootstrap/bootstrap.css
@@ -140,7 +140,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #f89d13;
+  color: #02A575;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
