--- a/template/css/style.css
+++ b/template/css/style.css
@@ -271,6 +271,7 @@ h1, h2, h3, h4, h5,
 
 /* Navbar */
 .site-navbar {
+  background-color: #333333;
   margin-bottom: 0px;
   z-index: 1999;
   position: absolute;
