--- a/template/index.html
+++ b/template/index.html
@@ -38,7 +38,7 @@
     
     <header class="site-navbar py-3" role="banner">
 
-      <div class="container">
+      <div class="container fixed-top" style="background-color: #333333;">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
@@ -50,7 +50,6 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Desafios</a></li>
-                <li><a href="help.html">Como funciona</a></li>
                 <li><a href="contact.html">Contato</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
@@ -72,7 +71,7 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte corre</h1>
+            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte correto</h1>
           </div>
         </div>
       </div>
@@ -88,7 +87,7 @@
             <a href="#">
               <h2 class="my-4 heading">Desafios</h2>
             </a>
-            <p>cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana, como participar e tempo.</p>
+            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana, como participar e tempo.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -168,19 +167,17 @@
 
 
 
-    <div class="site-section bg-light">
+    <div class="site-section" style="background-color: #98989833;">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
             <h2 class="font-weight-light text-primary">Lixos mais descartados</h2>
-            <!--<p class="color-black-opacity-5">We Offer The Following Services</p>-->
           </div>
         </div>
-        <!-- Banner que igu vai colocar -->
         <div class="row align-items-stretch">
           <div class="d-flex justify-content-center">
-          <figure style="">
-              <img src="images/lixo.jpg" alt="Image">
+          <figure style="width: 90%;">
+              <img src="images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
             </figure>
           </div>
 
@@ -212,11 +209,10 @@
           <div class="col-md-2">
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="#">Entrar</a></li>
+              <li><a href="login.html">Entrar</a></li>
               <li><a href="#">Desafios</a></li>
-              <li><a href="#">Como Funciona</a></li>
-              <li><a href="#">Contato</a></li>
-              <li><a href="#">Sobre</a></li>
+              <li><a href="contact.html">Contato</a></li>
+              <li><a href="about.html">Sobre</a></li>
             </ul>
           </div>
           <div class="col-md-3">
