changing transition and padding from navbar

--- a/template/about.html
+++ b/template/about.html
@@ -36,8 +36,6 @@
       <div class="site-mobile-menu-body"></div>
     </div>
     
-
-  
     <header class="site-navbar py-3" role="banner">
 
       <div class="container">
@@ -50,10 +48,10 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Desafios</a></li>
                 <li><a href="contact.html">Contato</a></li>
-                <li class="active"><a href="about.html">Sobre</a></li>
+                <li><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
               </ul>
             </nav>
@@ -64,8 +62,8 @@
 
         </div>
       </div>
-    </header>    
-  
+    </header>
+ 
 
   
 
