--- a/template/contact.html
+++ b/template/contact.html
@@ -25,7 +25,7 @@
   </head>
   <body>
   
-  <div class="site-wrap">
+   <div class="site-wrap">
 
     <div class="site-mobile-menu">
       <div class="site-mobile-menu-header">
@@ -38,7 +38,7 @@
     
     <header class="site-navbar py-3" role="banner">
 
-      <div class="container fixed-top">
+      <div class="container">
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
