criação de novas telas

--- a/template/about.html
+++ b/template/about.html
@@ -48,10 +48,10 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Desafios</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="desafios.html">Desafios</a></li>
                 <li><a href="contact.html">Contato</a></li>
-                <li><a href="about.html">Sobre</a></li>
+                <li class="active"><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
               </ul>
             </nav>
@@ -148,7 +148,7 @@
           </div>
            <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
             <div class="person">
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
+              <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-5">
               <h3>Fabiana Pereira</h3>
               <p class="position text-muted">Co-Founder, President</p>
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
@@ -206,7 +206,7 @@
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
               <li><a href="login.html">Entrar</a></li>
-              <li><a href="#">Desafios</a></li>
+              <li><a href="desafios.html">Desafios</a></li>
               <li><a href="contact.html">Contato</a></li>
               <li><a href="about.html">Sobre</a></li>
             </ul>
