--- a/template/contact.html
+++ b/template/contact.html
@@ -48,9 +48,9 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Desafios</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="desafios.html">Desafios</a></li>
+                <li class="active"><a href="contact.html">Contato</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
               </ul>
@@ -163,11 +163,10 @@
           <div class="col-md-2">
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="#">Entrar</a></li>
-              <li><a href="#">Desafios</a></li>
-              <li><a href="#">Como Funciona</a></li>
-              <li><a href="#">Contato</a></li>
-              <li><a href="#">Sobre</a></li>
+              <li><a href="login.html">Entrar</a></li>
+              <li><a href="desafios.html">Desafios</a></li>
+              <li><a href="contact.html">Contato</a></li>
+              <li><a href="about.html">Sobre</a></li>
             </ul>
           </div>
           <div class="col-md-3">
