alterações nas páginas do usuário

--- a/template/index.html
+++ b/template/index.html
@@ -84,10 +84,10 @@
             <div class="icon">
               <span class="icon-puzzle-piece"></span>
             </div>
-            <a href="#">
+            <a href="desafios.html">
               <h2 class="my-4 heading">Desafios</h2>
             </a>
-            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana, como participar e tempo.</p>
+            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana e como participar.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -95,10 +95,10 @@
             <div class="icon">
               <span class="icon-user"></span>
             </div>
-            <a href="#">
+            <a href="login.html">
               <h2 class="my-4 heading">Cadastrar</h2>
             </a>
-            <p>Faça seu cadastro e participe dos desafios para ganhar premiações e o mais importanta, ajudar a natureza.</p>
+            <p>Faça seu cadastro e participe dos desafios para ganhar premiações e o mais importante, ajudar a natureza.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -197,6 +197,8 @@
         </div>
       </div>
     </div>
+
+
     
     <footer class="site-footer">
       <div class="container">
