--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1391,3 +1391,10 @@ h1, h2, h3, h4, h5,
 .custom-pagination span {
   background: #e6e6e6;
   color: #000; }
+
+/*Dropdown - Menu*/
+@media screen and (min-width: 1200px) {
+  .btn-group .dropdown-toggle {
+    color: white !important;
+  }
+}
