--- a/template/desafios.html
+++ b/template/desafios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <title>Desafios</title>
     <meta charset="utf-8">
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-
 
     <link rel="stylesheet" href="css/aos.css">
 
