--- a/template/usuario/desafios.html
+++ b/template/usuario/desafios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <title>Desafios</title>
     <meta charset="utf-8">
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
 
     <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
-
-
 
     <link rel="stylesheet" href="../css/aos.css">
 
@@ -89,9 +87,46 @@
       </div>
     </div>  
 
+
+    <div class="site-section bd-light">
+      <div class="container">
+
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center border-primary">
+            <h2 class="font-weight-light text-primary">Meus Desafios</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
+              <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+            </div> 
+          </div>
+          
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
+              <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+            </div> 
+          </div>
+
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
+              <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+            </div> 
+          </div>
+        </div>
+      </div>
+    </div>
     
   
-    <div class="site-section">
+    <div class="site-section" style="background-color: #98989833;">
       <div class="container">
 
         <div class="row justify-content-center mb-5">
@@ -159,20 +194,6 @@
               <a href="#">2</a>
               <a href="#">3</a>
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    
-    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(../images/hero_bg_2.jpg); background-attachment: fixed;">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
-
-          <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
-            <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-single-big mb-4 d-inline-block popup-vimeo"><span class="icon-play"></span></a>
-            <h2 class="text-white font-weight-light mb-5 h1">Veja como participar do Recicle</h2>
-            
           </div>
         </div>
       </div>
