--- a/template/usuario/index.html
+++ b/template/usuario/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900|Display+Playfair:200,300,400,700"> 
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="../fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/jquery-ui.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
 
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="../css/aos.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     
   </head>
   <body>
@@ -48,11 +48,24 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="desafios.html">Desafios</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="desafios.html">Desafios</a></li>
                 <li><a href="contact.html">Contato</a></li>
                 <li><a href="about.html">Sobre</a></li>
-                <li><a href="login.html" class="btn btn-primary px-4 py-2 text-white">Entrar</a></li>
+                <li>
+                  <div class="btn-group">
+                    <button type="button" class="dropdown-toggle bg-transparent border-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="icon-user-circle"></i>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right">
+                      <div class="dropdown-item-text">Nome do usuário</div>
+                      <div class="dropdown-item-text mb-3">usuario@email.com</div>
+                      <button class="dropdown-item" type="button">Meus desafios</button>
+                      <button class="dropdown-item" type="button">Minha conta</button>
+                      <button class="dropdown-item" type="button">Sair</button>
+                    </div>
+                  </div>
+                </li>
               </ul>
             </nav>
           </div>
@@ -66,10 +79,9 @@
 
   
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" style="background-image: url(../images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
-
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte correto</h1>
           </div>
@@ -84,21 +96,21 @@
             <div class="icon">
               <span class="icon-puzzle-piece"></span>
             </div>
-            <a href="#">
+            <a href="desafios.html">
               <h2 class="my-4 heading">Desafios</h2>
             </a>
-            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana, como participar e tempo.</p>
+            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana e como participar.</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="feature-3 pricing h-100 text-center">
             <div class="icon">
-              <span class="icon-user"></span>
+              <span class="icon-settings"></span>
             </div>
             <a href="#">
-              <h2 class="my-4 heading">Cadastrar</h2>
+              <h2 class="my-4 heading">Minha Conta</h2>
             </a>
-            <p>Faça seu cadastro e participe dos desafios para ganhar premiações e o mais importanta, ajudar a natureza.</p>
+            <p>Edite as configurações da sua conta do Recicle.</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -143,19 +155,19 @@
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/xbox.png" alt="Image">
+                <img src="../images/xbox.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/spot.png" alt="Image">
+                <img src="../images/spot.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/uber.png" alt="Image">
+                <img src="../images/uber.png" alt="Image">
               </figure>
             </div>
 
@@ -177,7 +189,7 @@
         <div class="row align-items-stretch">
           <div class="d-flex justify-content-center">
           <figure style="width: 90%;">
-              <img src="images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
+              <img src="../images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
             </figure>
           </div>
 
@@ -186,17 +198,6 @@
     </div>
 
 
-    
-    <div class="site-section border-top">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-12">
-            <h2 class="mb-5 text-black">Ainda não possui uma conta?</h2>
-            <p class="mb-0"><a href="login.html" class="btn btn-primary py-3 px-5 text-white">Registre-se!</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
     
     <footer class="site-footer">
       <div class="container">
@@ -238,19 +239,19 @@
     </footer>
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="../js/jquery-ui.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/jquery.stellar.min.js"></script>
+  <script src="../js/jquery.countdown.min.js"></script>
+  <script src="../js/jquery.magnific-popup.min.js"></script>
+  <script src="../js/bootstrap-datepicker.min.js"></script>
+  <script src="../js/aos.js"></script>
 
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
     
   </body>
 </html>
