--- a/template/desafios.html
+++ b/template/desafios.html
@@ -79,8 +79,59 @@
     </div>  
 
     
-  
+
     <div class="site-section">
+      <div class="container">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center border-primary">
+            <h2 class="font-weight-light text-primary">Filtrar Desafios</h2>
+          </div>
+        </div>
+      
+        <form action="">
+          <div class="form-row justify-content-around">
+            <div class="col-md-3 mb-3 mb-md-0">
+              <label for="ecoponto">Ecoponto/Empresa</label>
+              <select id="ecoponto" class="form-control">
+                <option selected>Escolher...</option>
+                <option>...</option>
+              </select>
+            </div>
+      
+            <div class="col-md-3 mb-3 mb-md-0">
+              <label for="lixo">Tipo de lixo</label>
+              <select id="lixo" class="form-control">
+                <option selected>Escolher...</option>
+                <option>Papel e papelão</option>
+                <option>Óleo de cozinha</option>
+                <option>Lixo eletrônico</option>
+                <option>Pilhas e baterias</option>
+                <option>Metal</option>
+                <option>Vidro</option>
+              </select>
+            </div>
+      
+            <div class="col-md-3 mb-3 mb-md-0">
+              <label for="bonificacao">Tipo da bonificação</label>
+              <select id="bonificacao" class="form-control">
+                <option selected>Escolher...</option>
+                <option>Em dinheiro</option>
+                <option>Spotify</option>
+                <option>Netflix</option>
+              </select>
+            </div>
+            
+            <div class="col-auto align-self-end"">
+              <button type="submit" class="btn btn-primary">Filtrar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+  
+
+    <div class="site-section" style="background-color: #98989833;">
       <div class="container">
 
         <div class="row justify-content-center mb-5">
@@ -94,7 +145,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
           
@@ -102,7 +153,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
 
@@ -110,7 +161,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
 
@@ -118,7 +169,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
 
@@ -126,7 +177,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
 
@@ -134,7 +185,7 @@
             <div class="h-entry">
               <img src="images/blog_1.jpg" alt="Image" class="img-fluid">
               <h2 class="font-size-regular"><div class="text-primary">Título</div></h2>
-              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span> Jan 18, 2019</div>
+              <div class="meta mb-4">Nome da empresa <span class="mx-2">&bullet;</span>Tipo de lixo <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
             </div> 
           </div>
         </div>
