--- a/template/usuario/desafios.html
+++ b/template/usuario/desafios.html
@@ -48,8 +48,8 @@
             <nav class="d-flex site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav ml-auto d-none d-md-block">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="desafios.html">Desafios</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="desafios.html">Desafios</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#" class="mb-4 mb-md-0">Sobre</a></li>
               </ul>
