images fixed index.html

--- a/assets/template/user_public/index.html
+++ b/assets/template/user_public/index.html
@@ -140,19 +140,19 @@
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/xbox.png" alt="Image">
+                <img src="../images/xbox.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/spot.png" alt="Image">
+                <img src="../images/spot.png" alt="Image">
               </figure>
             </div>
 
             <div class="d-flex justify-content-center">
               <figure style="width:250px;">
-                <img src="images/uber.png" alt="Image">
+                <img src="../images/uber.png" alt="Image">
               </figure>
             </div>
 
@@ -174,7 +174,7 @@
         <div class="row align-items-stretch">
           <div class="d-flex justify-content-center">
           <figure style="width: 90%;">
-              <img src="images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
+              <img src="../images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
             </figure>
           </div>
 
