links and paths. Bugs fixed

--- a/assets/template/user_cidadao/desafios.html
+++ b/assets/template/user_cidadao/desafios.html
@@ -50,8 +50,8 @@
               <ul class="site-menu js-clone-nav ml-auto d-none d-md-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="desafios.html">Desafios</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#" class="mb-4 mb-md-0">Sobre</a></li>
+                <li><a href="contact.html">Contato</a></li>
+                <li><a href="about.html" class="mb-4 mb-md-0">Sobre</a></li>
               </ul>
 
               <div class="btn-group">
