--- a/assets/template/user_cidadao/contact.html
+++ b/assets/template/user_cidadao/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Recicle</title>
+    <title>Contato</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,7 +25,7 @@
   </head>
   <body>
   
-  <div class="site-wrap">
+   <div class="site-wrap">
 
     <div class="site-mobile-menu">
       <div class="site-mobile-menu-header">
@@ -48,9 +48,9 @@
             <nav class="d-flex site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav ml-auto d-none d-md-block">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="desafios.html">Desafios</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li class="active"><a href="contact.html">Contato</a></li>
                 <li><a href="about.html" class="mb-4 mb-md-0">Sobre</a></li>
               </ul>
 
@@ -87,127 +87,93 @@
       </div>
     </header>
 
-  
 
-    <div class="site-blocks-cover overlay" style="background-image: url(../images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url(../images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
+
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte correto</h1>
+            <h1 class="text-white font-weight-light text-uppercase font-weight-bold">Contato</h1>
+            <p class="breadcrumb-custom"><a href="index.html">Home</a> <span class="mx-2">&gt;</span> <span>Contato</span></p>
           </div>
         </div>
       </div>
     </div>  
 
-    <div class="container">
-      <div class="row align-items-center no-gutters align-items-stretch overlap-section">
-        <div class="col-md-4">
-          <div class="feature-1 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-puzzle-piece"></span>
-            </div>
-            <a href="desafios.html">
-              <h2 class="my-4 heading">Desafios</h2>
-            </a>
-            <p>Cumpra desafios para ser premiado. Aqui você pode saber os desafios da semana e como participar.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="feature-3 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-settings"></span>
-            </div>
-            <a href="my-account.html">
-              <h2 class="my-4 heading">Minha Conta</h2>
-            </a>
-            <p>Edite as configurações da sua conta do Recicle.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="feature-1 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-map-marker"></span>
-            </div>
-            <a href="ecopontos.html">
-              <h2 class="my-4 heading">Ecopontos</h2>
-            </a>
-            <p>Veja as cooperativas proximas de você.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+    
+    <div class="site-section bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7 mb-5">
+
+            
+
+            <form action="#" class="p-5 bg-white">
+             
+
+              <div class="row form-group">
+                <div class="col-md-6 mb-3 mb-md-0">
+                  <label class="text-black" for="fname">Nome</label>
+                  <input type="text" id="fname" class="form-control">
+                </div>
+                <div class="col-md-6">
+                  <label class="text-black" for="lname">Sobrenome</label>
+                  <input type="text" id="lname" class="form-control">
+                </div>
+              </div>
+
+              <div class="row form-group">
+                
+                <div class="col-md-12">
+                  <label class="text-black" for="email">Email</label> 
+                  <input type="email" id="email" class="form-control">
+                </div>
+              </div>
+
+              <div class="row form-group">
+                
+                <div class="col-md-12">
+                  <label class="text-black" for="subject">Assunto</label> 
+                  <input type="subject" id="subject" class="form-control">
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <label class="text-black" for="message">Mensagem</label> 
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Digite sua mensagem"></textarea>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <input type="submit" value="Enviar Mensagem" class="btn btn-primary py-2 px-4 text-white">
+                </div>
+              </div>
 
   
-    
-    <div class="site-section">
-      <div class="container">
-
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Bonificações</h2>
+            </form>
           </div>
-        </div>
+          <div class="col-md-5">
+            
+            <div class="p-4 mb-3 bg-white">
 
-        <div class="row justify-content-around">
+              <p class="mb-0 font-weight-bold">Email </p>
+              <p class="mb-0"><a href="#">youremail@domain.com</a></p>
 
-          <div class="col-md-5 align-self-center">
-            <div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
             </div>
-          </div>
-
-          <div class="col-md-4 slide-one-item owl-carousel">
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="https://pbs.twimg.com/profile_images/661888424073367552/pSK6r19h_400x400.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/xbox.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/spot.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/uber.png" alt="Image">
-              </figure>
+            
+            <div class="p-4 mb-3 bg-white">
+              <h3 class="h5 text-black mb-3">Mais informações</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.</p>
+              <p><a href="about.html" class="btn btn-primary px-4 py-2 text-white">Leia mais</a></p>
             </div>
 
           </div>
-        </div>
-        
-      </div>
-    </div>
-
-
-
-    <div class="site-section" style="background-color: #98989833;">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Lixos mais descartados</h2>
-          </div>
-        </div>
-        <div class="row align-items-stretch">
-          <div class="d-flex justify-content-center">
-          <figure style="width: 90%;">
-              <img src="../images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
-            </figure>
-          </div>
-
         </div>
       </div>
     </div>
-
-
     
     <footer class="site-footer">
       <div class="container">
@@ -220,10 +186,10 @@
           <div class="col-md-2">
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="ecopontos.html">Ecopontos</a></li>
+              <li><a href="login.html">Entrar</a></li>
               <li><a href="desafios.html">Desafios</a></li>
-              <li><a href="#">Contato</a></li>
-              <li><a href="#">Sobre</a></li>
+              <li><a href="contact.html">Contato</a></li>
+              <li><a href="about.html">Sobre</a></li>
             </ul>
           </div>
           <div class="col-md-3">
