--- a/assets/template/user_cidadao/desafios.html
+++ b/assets/template/user_cidadao/desafios.html
@@ -144,7 +144,7 @@
               </select>
             </div>
             
-            <div class="col-auto align-self-end"">
+            <div class="col-auto align-self-end">
               <button type="submit" class="btn btn-primary">Filtrar</button>
             </div>
           </div>
