--- a/assets/template/user_public/desafios.html
+++ b/assets/template/user_public/desafios.html
@@ -1,4 +1,4 @@
-../<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <title>Desafios</title>
@@ -88,7 +88,7 @@
           </div>
         </div>
       
-        <form action="">
+        <form action="#">
           <div class="form-row justify-content-around">
             <div class="col-md-3 mb-3 mb-md-0">
               <label for="ecoponto">Ecoponto/Empresa</label>
