--- a/assets/template/user_cidadao/about.html
+++ b/assets/template/user_cidadao/about.html
@@ -229,12 +229,13 @@
           <div class="col-md-2">
             <h2 class="mb-4">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="login.html">Entrar</a></li>
+              <li><a href="ecopontos.html">Ecopontos</a></li>
               <li><a href="desafios.html">Desafios</a></li>
               <li><a href="contact.html">Contato</a></li>
               <li><a href="about.html">Sobre</a></li>
             </ul>
           </div>
+
           <div class="col-md-3">
             <h2 class="mb-4">Redes Sociais</h2>
             <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
